--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ index.html
 <div class="container">
 
 
-     <h1>Welcome Scott's Photo Page</h1>
+     <h1>Welcome Jeff's Photo Page</h1>
     <div class="m-5 p-5">
      <h2 class="text-center w-100 mx-auto">Here at Scott’s Photo Biz we make your pictures a reality! We let you store your photos in a collection, upload photos into that collection, and print any photo you choose.</h2>
     </div>
