--- a/log-in.html
+++ b/log-in.html
@@ -34,7 +34,7 @@ login.html
       <div class="container-fluid">
         <a class="navbar-brand me-5" href="index.html">
           <h3 class="position-relative">Jeff's</h3>
-          <span class="position-absolute fs-6 text-info top-50 mt-1"> Photo Biz</span>
+          <span class="position-absolute fs-6 text-info top-50 mt-1 ms-2"> Photo Biz</span>
        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
