--- a/upload.html
+++ b/upload.html
@@ -22,7 +22,7 @@ index.html
 
 <link rel="shortcut icon" href="images/camera-circle-icon-2048x2048-aggqa7eg.png" type="image/x-icon">
 
-<title>Scotts : Upload</title>
+<title>Jeffs : Upload</title>
 </head>
 <body>
 
@@ -33,8 +33,8 @@ index.html
   <nav class="navbar navbar-expand-lg main-navbar">
       <div class="container-fluid">
         <a class="navbar-brand me-5" href="index.html">
-          <h3 class="position-relative">Scott's</h3>
-          <span class="position-absolute fs-6 text-info top-50 mt-1"> Photo Biz</span>
+          <h3 class="position-relative">Jeff's</h3>
+          <span class="position-absolute fs-6 text-info top-50 mt-1 ms-2"> Photo Biz</span>
        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
