--- a/index.html
+++ b/index.html
@@ -1,98 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!---------------------------------------------------------------- 
-Jeff B  
-Creation Date:  1/30/2024
-Agile Class Project
-index.html
------------------------------------------------------------------>
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Agile Class Project - Create Website for Product Owner">
+<meta name="description" content="Convert Word Documents to HTML">
 <meta name="keywords" content="HTML, CSS, JavaScript, FetchAPI, Agile, Scrum">
-<meta name="author" content="John B">
+<meta name="author" content="Jeff B">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- Line Awesome Icons   https://icons8.com/icons -->
-<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css">
+  
+<!---------------------------------------------------------------- 
+Jeff B  
+Creation Date:  7/26/2024
+index.html
+----------------------------------------------------------------->
 
 <link rel="stylesheet" href="css/bootstrap_v5_3_1.css">
 <link rel="stylesheet" href="css/index.css">
 
-<link rel="shortcut icon" href="images/camera-circle-icon-2048x2048-aggqa7eg.png" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
 <title>Jeffs : Welcome</title>
 </head>
 <body>
 
-
-
-<!-- Main Navbar -->
-<div class="main-navbar-wrapper">
-  <nav class="navbar navbar-expand-lg main-navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand me-5" href="index.html">
-          <h3 class="position-relative">Jeff's</h3>
-          <span class="position-absolute fs-6 text-info top-50 mt-1 ms-2"> Photo Biz</span>
-       </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto ms-0 ms-lg-5 mt-2 mt-lg-0 p-3 p-lg-0">
-            <li class="nav-item"><a class="nav-link" href="index.html">Welcome</a></li>
-            <li class="nav-item"><a class="nav-link" href="upload.html">Upload</a></li>
-            <li class="nav-item"><a class="nav-link" href="print.html">Print</a></li>
-            <li class="d-lg-none">
-              <a title="cart" href="cart.html">
-                <!-- <img src="./images/cart_icon.png" alt="" width="26"> -->
-                <i class="las la-file-upload"></i>
-              </a> 
-            </li>
-            <li class="d-lg-none">
-              <a class="nav-link text-decoration-none d-flex" type="button" aria-current="page" href="log-in.html">
-                <div class="pe-2"><img class="" src="./images/icons8-person-32.png" alt="" width="22"></div>
-                <span class="pt-2">Log in</span></a>
-            </li>
-          </ul>
-          <!-- <form class="d-flex flex-grow-1 position-relative ms-5 form" role="search">
-            <input class="form-control me-2" type="search" placeholder="What can we help you find?" aria-label="Search">
-            <button class="d-flex btn p-0" title="search" type="submit">
-              <img src="./images/icons8-search-32(1).png" alt="" >
-            </button>
-          </form> -->
-          <ul class="signin-and-cart d-flex align-items-center py-0 my-0">
-              <li class=""><a class="nav-link text-decoration-none" type="button" aria-current="page" href="log-in.html">
-                  <div class="pb-1 pe-2"><img class="" src="./images/icons8-person-32.png" alt="" width="22"></div>
-                  <span>Log in</span></a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a title="Home" class="navbar-brand" href="https://github.com/coolcreation" target="_blank">
+            <img src="images/apple-touch-icon-57x57.png" alt="" width="45">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-0 ms-lg-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Bulleted</a>
               </li>
-          </ul>
-
+              <li class="nav-item">
+                <a class="nav-link" href="numbered.html">Numbered</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </nav>
+
+
+   <div class="container">
+
+    <form class="col-11 mx-auto">
+
+      <div class="mb-3">
+        <label for="text-input" class="form-label fs-5 text-primary">Input <i><b>Bulleted</b></i> Word document text + 1st paragraph only!</label>
+        <textarea type="text" class="form-control" id="text-input" rows="7"></textarea>
       </div>
-    </nav>
-</div>
 
-<!-- Page Content -->
+      <button type="submit" id="form-submit-button" class="btn btn-primary w-100">Submit</button>
 
-<div class="container">
+    </form>
+
+    <div data-output="false" id="output-container" class="output-container col-11 mx-auto my-3">
+
+      <h5 class="text-primary">Here is your <i><b>Formatted</b></i> code!</h5>
+
+      <div id="output-HTML" class="mx-auto border border-2 p-4">
+       <!-- output from js -->
+      </div>
+
+      <button type="button" id="copyBtn" class="btn btn-primary w-100 mt-3">Copy to Clipboard</button>
 
 
-     <h1>Welcome Jeff's Photo Page</h1>
-    <div class="m-5 p-5">
-     <h2 class="text-center w-100 mx-auto">Here at Jeff’s Photo Biz we make your pictures a reality! We let you store your photos in a collection, upload photos into that collection, and print any photo you choose.</h2>
     </div>
 
+   </div>    <!-- end container -->
 
 
 
-</div>  <!-- end container -->
+         
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-
-<script src="js/index.js"></script>
-
+    <script src="/js/index.js"></script>
 </body>
 </html>
+
