--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
 <!---------------------------------------------------------------- 
-Jeff B  
+Jeff B    
 Creation Date:  7/26/2024
 index.html
 ----------------------------------------------------------------->
@@ -25,7 +25,7 @@ index.html
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a title="Home" class="navbar-brand" href="https://github.com/coolcreation" target="_blank">
+          <a title="Home" class="navbar-brand" href="https://www.jeffthecoder.com" target="_blank">
             <img src="images/apple-touch-icon-57x57.png" alt="" width="45">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
