--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ index.html
 
 <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-<title>Word Doc to HTML</title>
+<title>Bulleted Word Doc to HTML</title>
 </head>
 <body>
 
