--- a/numbered.html
+++ b/numbered.html
@@ -46,7 +46,7 @@ numbered.html
 
 
    <div class="container">
-        <h1 class="text-primary fs-1 ">Page Coming Soon!</h1>
+        <h1 class="text-primary fs-1 mx-auto">Page Coming Soon!</h1>
     <!-- <form class="col-11 mx-auto">
 
       <div class="mb-3">
